// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`one article found (not identical) 1`] = `
Object {
  "context": Object {
    "data": Object {
      "sessionId": 1577836800000,
    },
  },
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to the one you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "Please choose the most similar message from the list.",
      "contents": Object {
        "contents": Array [
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-1\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.1”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.1, Looks 87% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image.jpeg",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 5,
                  "text": "None of these messages matches mine :(",
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"__NO_ARTICLE_FOUND__\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "None of these messages matches mine :(",
                    "label": "Tell us more",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#AAAAAA",
                  "margin": "none",
                  "size": "sm",
                  "text": "😶",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`one identical article found 1`] = `"__HANDLE_POSTBACK_RESULT__"`;

exports[`should handle image not found 1`] = `
Object {
  "context": Object {
    "data": Object {
      "messageId": "6530038889933",
      "searchedText": "",
      "sessionId": 1577836800000,
    },
  },
  "replies": Array [
    Object {
      "altText": "I am sorry you cannot find the information you are looking for.
Do you want someone to fact-check this message?",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "I am sorry you cannot find the information you are looking for.
Do you want someone to fact-check this message?",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "Be the first to report the message",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "contents": Array [
                Object {
                  "text": "Currently we don’t have this message in our database. If you think it is most likely a rumor, ",
                  "type": "span",
                },
                Object {
                  "color": "#ffb600",
                  "text": "press “🆕 Report to database” to make this message public on Cofacts database ",
                  "type": "span",
                  "weight": "bold",
                },
                Object {
                  "text": "and have volunteers fact-check it. This way you can help the people who receive the same message in the future.",
                  "type": "span",
                },
              ],
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "paddingAll": "lg",
          "spacing": "md",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"__POSTBACK_YES__\\",\\"sessionId\\":1577836800000,\\"state\\":\\"ASKING_ARTICLE_SUBMISSION_CONSENT\\"}",
                "displayText": "🆕 Report to database",
                "label": "🆕 Report to database",
                "type": "postback",
              },
              "color": "#ffb600",
              "style": "primary",
              "type": "button",
            },
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"__POSTBACK_NO__\\",\\"sessionId\\":1577836800000,\\"state\\":\\"ASKING_ARTICLE_SUBMISSION_CONSENT\\"}",
                "displayText": "Don’t report",
                "label": "Don’t report",
                "type": "postback",
              },
              "color": "#333333",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "spacing": "sm",
          "type": "box",
        },
        "styles": Object {
          "body": Object {
            "separator": true,
          },
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`twelve articles found 1`] = `
Object {
  "context": Object {
    "data": Object {
      "sessionId": 1577836800000,
    },
  },
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to the one you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "Please choose the most similar message from the list.",
      "contents": Object {
        "contents": Array [
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-1\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.1”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.1, Looks 100% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image.jpeg",
            },
            "type": "bubble",
          },
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-2\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.2”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.2, Looks 87% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image2.jpeg",
            },
            "type": "bubble",
          },
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-1\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.3”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.3, Looks 100% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image.jpeg",
            },
            "type": "bubble",
          },
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-2\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.4”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.4, Looks 87% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image2.jpeg",
            },
            "type": "bubble",
          },
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-1\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.5”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.5, Looks 100% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image.jpeg",
            },
            "type": "bubble",
          },
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-2\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.6”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.6, Looks 87% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image2.jpeg",
            },
            "type": "bubble",
          },
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-1\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.7”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.7, Looks 100% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image.jpeg",
            },
            "type": "bubble",
          },
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-2\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.8”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.8, Looks 87% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image2.jpeg",
            },
            "type": "bubble",
          },
          Object {
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"image-article-1\\",\\"sessionId\\":1577836800000,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “No.9”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "No.9, Looks 100% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "hero": Object {
              "size": "full",
              "type": "image",
              "url": "http://foo/image.jpeg",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;
